[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/gui/LSA_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/gui/JinxedWizards.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/gui/settings_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gui/LSA_continue_splash_800x500.png" type="Texture" id=4]
[ext_resource path="res://src/gui/continue_menu.gd" type="Script" id=5]
[ext_resource path="res://src/gui/LSA_continue_bg_1024x600.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Continue" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 507, 296 )
texture = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="BG"]
margin_left = -507.0
margin_top = -296.0
margin_right = 517.0
margin_bottom = 304.0
color = Color( 1, 1, 1, 0 )

[node name="Splash" type="Sprite" parent="BG/Background"]
position = Vector2( 510, 299 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="BG/Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BG/Background/CenterContainer"]
margin_left = 388.0
margin_top = 114.0
margin_right = 636.0
margin_bottom = 486.0
custom_constants/separation = 7

[node name="ContinueText" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "YOU TOOK A PLUNGE!"
align = 1
valign = 1

[node name="ContinueText2" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 248.0
margin_bottom = 177.0
text = "NOTE: if you 
press continue you
will start the game
over again."
align = 1
valign = 1

[node name="Result" type="Label" parent="BG/Background/CenterContainer/VBoxContainer"]
visible = false
margin_top = 22.0
margin_right = 187.0
margin_bottom = 37.0
text = "You have scored:  points"
align = 1
valign = 1

[node name="Control" type="Control" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 248.0
margin_bottom = 184.0

[node name="ContinueBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 248.0
margin_bottom = 231.0
rect_min_size = Vector2( 0, 40 )
text = "Continue?"

[node name="MenuBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 248.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 40 )
text = "Main Menu"

[node name="SettingsBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 285.0
margin_right = 248.0
margin_bottom = 325.0
rect_min_size = Vector2( 0, 40 )
text = "Settings"

[node name="QuitBtn" type="Button" parent="BG/Background/CenterContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 248.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 40 )
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="BG/Background/CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
